Fix line breaks in user comments.

--- a/src/base.less
+++ b/src/base.less
@@ -125,6 +125,11 @@
                 display: none;
             }
 
+            .adnotatio-commentbar-comment-text {
+                white-space: pre-wrap;
+                word-break: break-word;
+            }
+
             .adnotatio-commentbar-comment-replies {
                 background: #eee;
                 margin: -5px;
